--- a/style.css
+++ b/style.css
@@ -2897,6 +2897,7 @@ input[type="button"]:disabled,
     color: #e0e0e0;
     font-style: italic;
     margin: 1em 0 0 0;
+    text-align: center;
 }
 
 #header>footer {
